Center swatches on mobile in tile. Cleanup gallery to fix pagination issues

--- a/src/components/swatches/_swatches.scss
+++ b/src/components/swatches/_swatches.scss
@@ -29,6 +29,7 @@
         flex-grow: 2;
         display: flex;
         flex-wrap: wrap;
+        justify-content: center;
     }
 
     &__swatch {
